objects/cpqlabs__LogEvent__e.object
<CustomObject>
    <description>Platform Event to capture Logs</description>
    <fields>
        <fullName>cpqlabs__ClassName__c</fullName>
        <description>Class Name attribute to this action</description>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpqlabs__JSON__c</fullName>
        <description>JSON String (for debugging API calls)</description>
        <label>JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpqlabs__Level__c</fullName>
        <description>Logging Level for this action</description>
        <label>Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpqlabs__Message__c</fullName>
        <description>Message for this action</description>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpqlabs__ObjectIDs__c</fullName>
        <description>Comma delimited list of Object ID&apos;s affected by this action</description>
        <label>Object IDs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpqlabs__ObjectName__c</fullName>
        <description>Object Name being saved in this action (for DML)</description>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpqlabs__StackTrace__c</fullName>
        <description>Stack Trace (for exceptions)</description>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Log Event</label>
    <pluralLabel>Log Events</pluralLabel>
</CustomObject>